fix background color on Safari

--- a/src/app/giphy/components/user-input/user-input.component.scss
+++ b/src/app/giphy/components/user-input/user-input.component.scss
@@ -35,6 +35,7 @@
     border-right: 0;
     border-bottom: 1px solid #5f5f5f;
     cursor: pointer;
+    background-color: #ffffff;
   }
 
 }
